# RustIDD

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml  README.md  build.rs
app/src/: lib.rs  main.rs
rust_idd_driver/: Cargo.toml  README.md  rust_idd_driver.inx
rust_idd_driver/src/: lib.rs  util.rs
