[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Devices_Properties",
    "Win32_Devices_Enumeration_Pnp",
]

[build-dependencies]
winres = "0.1.12"